Fixed kierans favourite bug, the little gap on the menu

--- a/htdocs/styles/webtrack.css
+++ b/htdocs/styles/webtrack.css
@@ -319,7 +319,7 @@ tr.notice { background-color: #FFFFB0; }
 
 #menu a.greyed, #menu a.greyed:hover { color: #C6C3C6; }
 
-* html #menu li a {
+#menu li a {
   position: relative;
 }
 
@@ -350,6 +350,7 @@ html>body #menu li ul {  display: none; }
   border-width: 0 1px 0 1px;
   border-style: solid;
   border-color: #C5C5C5;
+  background: white;
 }
 
 #menu li li ul {
